# airbnb-clone-backend-2024

./: .env  .gitignore  db.sqlite3  pyproject.toml  requirements.txt
airbnb-clone-frontend/: package-lock.json  package.json  tsconfig.json
airbnb-clone-frontend/src/: App.tsx  api.ts  index.tsx  router.tsx  theme.ts  types.d.ts
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py
categories/: admin.py  apps.py  custom-viewset.md  models.py  post.json  serializer.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: authenticatio.md  authentication.py  authtoken.md  grapql설치법.md  permissions.py  schema.py  settings.py  test.http  urls.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_remove_perk_detail_perk_details_and_more.py  0003_experience_category.py
houses/: admin.py  models.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py
memo/chapter17/: 17.3 import react를 해야하는 이유.md  17.3 outlet.md
memo/chapter18/: 18.1 InputGroup.md  18.2 객체 비구조화 할당.md  (+3 more)
reviews/: admin.py  models.py  serializers.py
rooms/: 11-14-장고 데이터가져오는 sql.md  Serializer정리.md  admin.py  django-import관례.md  models.py  sample-room  sample-room.json  serializers.py  tests.py  urls.py  views.py  키워드인자.md
users/: admin.py  logout.md  test.http  urls.py  views.py
wishlists/: admin.py  models.py  serilalizers.py  urls.py  views.py
(+40 files in other folders)
