[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["jaejunkim <aamoof@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pillow = "^10.3.0"
black = "^24.4.2"
setuptools = "^70.0.0"
djangorestframework = "^3.15.2"
strawberry-graphql = {extras = ["debug-server"], version = "^0.247.1"}
strawberry-graphql-django = "^0.49.1"
pyjwt = "^2.9.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
